# ghexbench

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  RESULTS.md
cartex/: CMakeLists.txt
cartex/cmake/: cmake_config.inc.in
cartex/include/cartex/common/: accumulator.hpp  histogram.hpp  memory.hpp  memory_view.hpp  options.hpp  sync_loop.hpp  thread_pool.hpp
cartex/include/cartex/decomposition/: decomposition.hpp
cartex/include/cartex/device/: set_device.hpp
cartex/include/cartex/memory/: memory.hpp  memory_view.hpp
cartex/include/cartex/runtime/: run.hpp  runtime.hpp  runtime.inc
cartex/include/cartex/runtime/gcl_comm/: runtime.hpp
cartex/include/cartex/runtime/ghex_comm/: runtime.hpp
cartex/include/cartex/runtime/mpi_comm/: runtime.hpp
cartex/include/cartex/runtime/oomph_comm/: runtime.hpp
cartex/include/cartex/runtime/tausch_comm/: runtime.hpp
cartex/results/betzy/27_nodes/: halo_fields_allcores.md  jube_5.md  jube_8.md  jube_9.md  plots.md  sequence.md
cartex/results/betzy/single_node/: halo_fields_allcores.md  halo_fields_halfcores.md  jube_0.md  jube_2.md  sequence.md  staged.md
cartex/results/daint/daint_mc/: daint_mc_0001_128_double.md  daint_mc_0027_064_double.md  daint_mc_0064_064_double.md  daint_mc_0064_064_float_threads.md  daint_mc_0064_128_double.md  daint_mc_0064_128_float_threads.md  results.md
cartex/run/ault/ault_18/: bench.xml
cartex/run/ault/ault_25/: bench.xml
cartex/run/betzy/compute/: bench.xml
cartex/run/betzy/compute/slurm/: job.in
cartex/run/utils/slurm/: substitute.xml
cartex/src/: CMakeLists.txt
cartex/src/common/: CMakeLists.txt  options.cpp  sync_loop.cpp  thread_pool.cpp
cartex/src/decomposition/: CMakeLists.txt  decomposition.cpp
cartex/src/device/: CMakeLists.txt  set_device.cpp
cartex/src/runtime/: CMakeLists.txt  runtime.cpp  runtime_inc.cpp
cartex/src/runtime/gcl_comm/: CMakeLists.txt  runtime.cpp
cartex/src/runtime/ghex_comm/: CMakeLists.txt  ghex_cmake_config.inc.in  runtime.cpp
cartex/src/runtime/mpi_comm/: CMakeLists.txt  kernels.hpp  runtime.cpp
cartex/src/runtime/oomph_comm/: CMakeLists.txt  runtime.cpp
cartex/src/runtime/tausch_comm/: CMakeLists.txt  runtime.cpp
cmake/: ghexbench_compile_options.cmake
exchange/daint_gpu/: bench.xml
include/ghexbench/: accumulator.hpp  histogram.hpp  hw_topo.hpp  mpi.hpp  mpi_environment.hpp  options.hpp  sync_loop.hpp  thread_affinity.hpp  thread_pool.hpp  timer.hpp
p2p/: CMakeLists.txt
p2p/cmake/: p2p_config.hpp.in
p2p/include/p2p/: benchmark.hpp  callbacks.hpp  device_map.hpp
p2p/src/: CMakeLists.txt  benchmark.cpp  benchmark_2_nodes.cpp  benchmark_base.cpp  benchmark_intra_l3.cpp  benchmark_intra_node.cpp  benchmark_paired.cpp  benchmark_paired_simple.cpp  device_map.cpp  main.cpp
results/betzy/: README.md  RESULTS.md  halo_fields_1node_halfcores.txt  halo_fields_27nodes_allcores.txt  halo_fields_27nodes_halfcores.txt  jube_single_node_0.md  jube_single_node_1.md  jube_single_node_2.md  jube_single_node_3.md  mpicart_vs_hwcart_27nodes_halfcores.txt
results/betzy/27_nodes/: halo_fields_halfcores.md  jube_0.md  jube_1.md  jube_2.md  jube_3.md  jube_4.md  jube_6.md  jube_7.md  mpicart_vs_hwcart.md  plots.md  staged.md
results/betzy/single_node/: halo_fields_halfcores.md  jube_1.md  jube_3.md  staged.md  xyz_vs_zyx_single_node.txt
results/daint/daint_mc/: daint_mc_0001_064_double.md  daint_mc_0001_064_float.md  daint_mc_0001_064_float_threads.md  daint_mc_0001_128_double.md  daint_mc_0001_128_float.md  daint_mc_0001_128_float_threads.md  daint_mc_0027_064_double.md  daint_mc_0027_064_float.md  daint_mc_0027_064_float_threads.md  daint_mc_0027_128_double.md  daint_mc_0027_128_float.md  daint_mc_0027_128_float_threads.md  daint_mc_0064_064_double.md  daint_mc_0064_064_float.md  daint_mc_0064_128_double.md  daint_mc_0064_128_float.md  results.md
results/daint/daint_mc/single_node/: results.md
run/: configure
run/ault/ault_18/: bench.xml
run/ault/ault_18/slurm/: job.in
run/ault/slurm/: ault_job.in
run/betzy/compute/: bench.xml
run/betzy/compute/slurm/: job.in
run/daint/daint_gpu/: bench.xml
run/daint/daint_gpu/slurm/: job.in  job_simple.in
run/daint/daint_mc/: bench.xml  bench_simple.xml
run/daint/daint_mc/slurm/: job.in  job_simple.in
run/utils/: analyse.xml
run/utils/slurm/: execute.xml  slurm_job.in  substitute.xml
run_daint_gpu/: bench.xml
src/: CMakeLists.txt  hw_topo.cpp  mpi.cpp  mpi_environment.cpp  options.cpp  sync_loop.cpp  thread_affinity.cpp  thread_pool.cpp
utils/jube/slurm/: execute.xml  flag.in  job.in  substitute.xml
utils/jube/slurm/daint/: gpu_job.in  job.in  mc_job.in
utils/jube/slurm/daint/daint_gpu/: job.in
utils/jube/slurm/daint/daint_mc/: job.in
