find_package(MPI REQUIRED COMPONENTS CXX)

set(CARTEX_EVICT_CACHE OFF CACHE BOOL "Prefetch memory between iterations")
set(CARTEX_EVICT_CACHE_SIZE "2621440" CACHE STRING "Prefetch memory size")
add_library(runtime)
cartex_target_compile_options(runtime)
target_compile_definitions(runtime PUBLIC CARTEX_RUNTIME=${CARTEX_RUNTIME})
if (CARTEX_EVICT_CACHE)
    target_compile_definitions(runtime PRIVATE CARTEX_EVICT_CACHE)
    target_compile_definitions(runtime PRIVATE CARTEX_EVICT_CACHE_SIZE=${CARTEX_EVICT_CACHE_SIZE})
endif()
target_link_libraries(runtime PRIVATE cartex)
target_link_libraries(runtime PRIVATE sync_loop)
target_link_libraries(runtime PRIVATE thread_pool)
target_link_libraries(runtime PRIVATE MPI::MPI_CXX)
target_link_libraries(runtime PRIVATE HWCART::hwcart)

compile_as_cuda(runtime.cpp)
target_sources(runtime PRIVATE runtime.cpp)

compile_as_cuda(${CARTEX_RUNTIME}/runtime.cpp)
add_subdirectory(${CARTEX_RUNTIME})
